# GERTIE-DEV

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOY_NOW.txt  local_camera_slave.py  pyproject.toml  run_gui_with_logging.sh
.quality/: check_quality.sh  ruff.toml
config/: unified_config.py
deployment/: deploy.yml  inventory.ini  run_ansible_supplement.sh
docs/: MIGRATION_GUIDE.md  validate_enhancements.sh
gertie/: __init__.py  feature_flags.py
gertie/controller/: __init__.py
gertie/node/: __init__.py
gertie/shared/: __init__.py  protocol.py  protocol_bridge.py
shared/: config.py  transforms.py
slave/: still_capture.py  video_stream.py
